FaQ tittle on mobile fixed

--- a/styles/faqItem.module.scss
+++ b/styles/faqItem.module.scss
@@ -19,7 +19,7 @@
 @media screen and (max-width: 992px) {
     .title {
         p {
-            text-align: end;
+           
             align-items: center;
             font-weight: bold;
             min-width: 40%;
@@ -116,7 +116,7 @@
                 font-size: 40pt;
                 font-weight: 600;
                 position: relative;
-                padding-left: 50px;
+                
             }
         }
     }
